--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/lottie-splash-screen": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "bootstrap": "^4.3.1",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
+    "ionic-selectable": "^4.4.0",
+    "ionic4-date-picker": "^0.1.0",
+    "lottie-web": "^5.5.7",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
