--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ionic-native/lottie-splash-screen": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/video-player": "^5.12.0",
     "@ionic/angular": "^4.7.1",
     "bootstrap": "^4.3.1",
     "cordova-android": "8.0.0",
+    "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "core-js": "^2.5.4",
     "ionic-selectable": "^4.4.0",
     "ionic4-date-picker": "^0.1.0",
@@ -78,7 +80,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com.moust.cordova.videoplayer": {}
     },
     "platforms": [
       "android"
